--- a/README
+++ b/README
@@ -82,3 +82,4 @@ TODO
   http://www.thegeekstuff.com/tag/vi-vim-tips-and-tricks/
   http://superuser.com/questions/147069/vim-plugin-creation-tutorial - a quick overview of vim plugins
   http://www.swaroopch.com/notes/Vim_en:Table_of_Contents - some stuff about scripting here as well as other good info
+- create plugin to move lines or visual selection up and down using a particular command, can come in very handy and may be good practice (ultimately not very useful though, since dd and p will essentially do this fucntionality for you)
